Comments and logger is added